--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,6 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
-    implementation "mysql:mysql-connector-java"
     implementation "com.auth0:java-jwt:3.4.0"
+    implementation "org.postgresql:postgresql"
 }
